--- a/chathealthstyles.css
+++ b/chathealthstyles.css
@@ -294,6 +294,15 @@ a:hover {
     padding-right:40px;
 }
 
+.textarea {
+    width:100%;
+    padding:15px;
+    border:1px solid black;
+    border-radius:10px;
+    margin-top:20px;
+    text-align:left;
+}
+
 @media (max-width: 800px) {
     .nav_style {
         width: 95%;
